--- a/index.html
+++ b/index.html
@@ -853,6 +853,11 @@ mtLayer.on('mouseover', function () {
       stroke: false
     }
   }).addTo(map);
+  // 🔒 Disable pointer events on the hover layer
+hoverHighlight.eachLayer(l => {
+  const el = l.getElement();
+  if (el) el.style.pointerEvents = 'none';
+});
 });
 mtLayer.on('mouseout', function () {
   if (hoverOverlay) {
