--- a/index.html
+++ b/index.html
@@ -805,31 +805,29 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
             fetch('Townships/Boundaries_Township_ManheimTownship_PA.geojson')
   .then(r => r.json())
   .then(mtData => {
-    let hoverOverlay = null; // ✅ define this ONCE
-
     L.geoJSON(mtData, {
       pane: 'townshipPane',
       style: {
         fillColor: '#cccccc',
         fillOpacity: 0.7,
-        color: 'black',       // ← default border
+        color: 'black',
         weight: 1.5,
+        pane: 'townshipPane'
       },
       onEachFeature: (feature, mtLayer) => {
-        // 🟡 Hover tooltip
         mtLayer.on('mouseover', function () {
           if (insideManheim) return;
 
-          // Tooltip
           const tooltip = document.getElementById('custom-tooltip');
           const center = mtLayer.getBounds().getCenter();
           const screenPoint = map.latLngToContainerPoint(center);
+
           tooltip.innerText = "Manheim Township";
           tooltip.style.left = screenPoint.x + 'px';
           tooltip.style.top = screenPoint.y + 'px';
           tooltip.style.display = 'block';
 
-          // 🔶 Hover overlay (gold)
+          // Add semi-transparent polygon overlay
           if (hoverOverlay) {
             map.removeLayer(hoverOverlay);
             hoverOverlay = null;
@@ -840,9 +838,7 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
             style: {
               fillColor: '#ffd700',
               fillOpacity: 0.3,
-              color: 'black', // subtle outline
-              weight: 1,
-              opacity: 1
+              stroke: false
             }
           }).addTo(map);
 
@@ -863,7 +859,6 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
           }
         });
 
-        // 🟦 Click logic
         mtLayer.on('click', () => {
           map.fitBounds(mtLayer.getBounds(), { maxZoom: 15 });
           console.log("📍 Manheim Township clicked");
@@ -872,7 +867,7 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
           mtLayer.setStyle({
             fillOpacity: 0,
             weight: 2,
-            color: '#3399ff', // 🔵 active color
+            color: '#3399ff',
             opacity: 1
           });
 
@@ -882,7 +877,6 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
             mtPath.style.outline = 'none';
           }
 
-          // 🧱 Create mask that reveals only MT
           if (worldMask) {
             map.removeLayer(worldMask);
             worldMask = null;
@@ -906,7 +900,8 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
         });
       }
     }).addTo(map);
-  }); // ✅ <- this was missing
+  });
+
 
 
 
@@ -1284,7 +1279,6 @@ document.getElementById('give-up').onclick = async function () {
     window.scrollTo({ top: 0, behavior: 'smooth' });
   }, usedHint ? 2000 : 0);
 };
-}, 500);
   </script>
 </body>
 </html>
