--- a/index.html
+++ b/index.html
@@ -881,8 +881,8 @@ mtLayer.on('mouseout', function () {
   // 🔒 Disable interaction and fade MT polygon
   mtLayer.setStyle({
     fillOpacity: 0,
-    weight: 2,
-    color: '#3399ff',
+    weight: 1.5,
+    color: 'black',
     opacity: 1
   });
 
