--- a/index.html
+++ b/index.html
@@ -1140,6 +1140,17 @@ let interactionCount = 0;
     }
   });
 }
+function triggerCorrectDissolveAnimation(layer) {
+  const el = layer.getElement();
+  if (!el) return;
+
+  el.classList.add('dissolve-correct');
+
+  // Optional: remove the class after 1 second
+  setTimeout(() => {
+    el.classList.remove('dissolve-correct');
+  }, 1000);
+}
 
 // ✅ Submit handler defined OUTSIDE of loadMap
 document.getElementById('submit-guess').onclick = async function () {
