--- a/index.html
+++ b/index.html
@@ -717,13 +717,14 @@ async function loadMap() {
             }
 
             for (const l of nameToLayers[name] || []) {
-              const sid = String(l.feature.id);
-              const s = segmentStateMap.get(sid);
-              if (!s) continue;
-              if (!s.correct && !s.used_hint) {
-                l.setStyle({ color: '#00ccff', weight: 8, pane: 'hiddenRoads' });
-              }
-            }
+  const sid = String(l.feature.id);
+  const s = segmentStateMap.get(sid);
+  if (!s || (!s.correct && !s.used_hint)) {
+    l.setStyle({ color: '#00ccff', weight: 8, pane: 'hiddenRoads' });
+    l._originalColor = 'blue'; // Optional: update originalColor if needed
+  }
+}
+
 
             activeRoadName = name;
             currentRoad = { name, id, attempts: 0, layer };
