--- a/index.html
+++ b/index.html
@@ -1158,28 +1158,30 @@ function triggerCorrectDissolveAnimation(layer) {
   const el = layer.getElement();
   if (!el) return;
 
-  // Initial dissolve stroke style (transparent green)
+  // Start fully transparent green
   el.style.stroke = '#009944';
   el.style.strokeOpacity = 0;
   el.style.transition = 'stroke-opacity 0.5s ease';
+
+  // Force browser to register initial style
+  void el.offsetWidth;
 
   // Fade in the green stroke
   setTimeout(() => {
     el.style.strokeOpacity = 0.7;
   }, 0);
 
-  // After fade-in, lock in the persistent correct-final style
+  // After animation, freeze the style and mark as correct
   setTimeout(() => {
     el.classList.add('correct-final');
-
-    // Ensure stroke sticks after dissolve
+    el.style.transition = 'none';
     el.style.stroke = 'rgba(0, 100, 0, 0.4)';
     el.style.strokeOpacity = 0.7;
-    el.style.transition = 'none'; // stop future animations
 
     layer._originalColor = 'greenish';
-  }, 500); // match fade duration
+  }, 500);
 }
+
 
 
 
