--- a/index.html
+++ b/index.html
@@ -184,23 +184,29 @@
 }
 
 .correct-final {
-  stroke: rgba(0, 160, 0, 0.4); /* brighter translucent green */
+  stroke: rgba(0, 160, 0, 0.4); /* translucent green */
+  stroke-opacity: 0.7;
+  stroke-dasharray: 5, 999;
+  stroke-dashoffset: -10;
   animation: dissolveFade 0.8s ease-out forwards;
   pointer-events: none;
 }
+
+
 
 @keyframes dissolveFade {
   0% {
     stroke-dasharray: 1, 999;
     stroke-dashoffset: 0;
-    opacity: 1;
+    stroke-opacity: 0;
   }
   100% {
     stroke-dasharray: 5, 999;
     stroke-dashoffset: -10;
-    opacity: 0.4;
+    stroke-opacity: 0.7;
   }
 }
+
 
     .hint-used-final {
   stroke: rgba(255, 165, 0, 0.4); /* soft translucent orange */
