--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   stroke: rgba(0, 160, 0, 0.4);
   stroke-dasharray: 1, 999;
   stroke-dashoffset: 0;
-  stroke-opacity: 0;
+  stroke-opacity: 0.5;
 
   animation: dissolveFade 1.2s ease-out forwards;
   pointer-events: none;
@@ -1167,17 +1167,21 @@ function triggerCorrectDissolveAnimation(layer) {
   const el = layer.getElement();
   if (!el) return;
 
-  // ✅ 1. Set initial green stroke manually so the path is visible
+  // ✅ Reset any inline styles (in case of red/yellow/orange overrides)
+  el.style.transition = '';
   el.style.stroke = 'rgba(0, 160, 0, 0.4)';
-  el.style.opacity = '1'; // make sure it starts fully visible
+  el.style.strokeDasharray = '';
+  el.style.strokeDashoffset = '';
+  el.style.opacity = '1';
 
-  // ✅ 2. Reset animation class
+  // ✅ Remove class if already applied (force restart)
   el.classList.remove('correct-final');
-  void el.offsetWidth; // Force reflow
+  void el.offsetWidth; // force reflow
 
-  // ✅ 3. Add animation class to begin dissolve
+  // ✅ Add class to trigger dissolve
   el.classList.add('correct-final');
 }
+
 
 
 
