--- a/index.html
+++ b/index.html
@@ -184,30 +184,28 @@
 }
 
 .correct-final {
-  stroke: rgba(0, 160, 0, 0.4);
-  stroke-dasharray: 1, 999;
-  stroke-dashoffset: 0;
-  stroke-opacity: 0.5;
-
-  animation: dissolveFade 1.2s ease-out forwards;
+  stroke: rgba(0, 160, 0, 0.6); /* Start green */
+  stroke-width: 6;
+  animation: dissolveFade 1s ease-out forwards;
   pointer-events: none;
+  filter: drop-shadow(0 0 3px rgba(0, 255, 0, 0.4));
 }
+
 
 
 
 
 @keyframes dissolveFade {
   0% {
-    stroke-dasharray: 1, 999;
-    stroke-dashoffset: 0;
-    stroke-opacity: 0;
+    stroke: rgba(0, 160, 0, 0.6);
+    opacity: 1;
   }
   100% {
-    stroke-dasharray: 5, 999;
-    stroke-dashoffset: -10;
-    stroke-opacity: 0.7;
+    stroke: rgba(0, 160, 0, 0.6); /* Keep stroke same */
+    opacity: 0.4;                 /* Just fade slightly */
   }
 }
+
 
 
 
