--- a/index.html
+++ b/index.html
@@ -184,27 +184,29 @@
 }
 
 .correct-final {
-  stroke: rgba(0, 160, 0, 0.6); /* Start green */
+  stroke: #00ccff;               /* Start as active blue */
   stroke-width: 6;
-  animation: dissolveFade 2.5s ease-out forwards;
+  opacity: 1;
+  animation: dissolveBlueToGreen 2.5s ease-out forwards;
   pointer-events: none;
-  filter: drop-shadow(0 0 3px rgba(0, 255, 0, 0.4));
 }
 
 
 
 
 
-@keyframes dissolveFade {
+
+@keyframes dissolveBlueToGreen {
   0% {
-    stroke: rgba(0, 160, 0, 0.6);
+    stroke: #00ccff;             /* Blue */
     opacity: 1;
   }
   100% {
-    stroke: rgba(0, 160, 0, 0.6); /* Keep stroke same */
-    opacity: 0.7;                 /* Just fade slightly */
+    stroke: #009944;             /* Final green */
+    opacity: 0.7;                /* Slight transparency */
   }
 }
+
 
 
 
