--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
   transform: translate(-50%, -50%);
   display: none; /* Hidden by default */
 }
+.hover-green {
+  filter: drop-shadow(0 0 4px rgba(0, 255, 0, 0.35));
+}
 
     .hint-dissolve {
   transition: opacity 2s ease;
