--- a/index.html
+++ b/index.html
@@ -737,6 +737,7 @@ if (el) el.classList.remove('hover-green');
           });
 
           layer.on('click', function () {
+            const id = feature.id;
             if (!insideLancaster) return;
             const state = segmentStateMap.get(id);
             if (state?.correct || state?.used_hint) return;
