--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,11 @@ loadMap();
   const normalizedAnswer = normalizeName(currentRoad.name);
 
   if (normalizedGuess === normalizedAnswer) {
-    segmentStateMap.set(String(currentRoad.id), { correct: true, used_hint: false });
+    for (const l of nameToLayers[currentRoad.name] || []) {
+  const sid = String(l.feature.id);
+  segmentStateMap.set(sid, { correct: true, used_hint: false });
+}
+
     // ✅ Correct guess
     currentRoad.segments.forEach(layer => {
       layer.setStyle({ color: 'gray' });
