--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@
 
 
 
-    .hint-used-final {
-  stroke: rgba(255, 165, 0, 0.4); /* soft translucent orange */
-  opacity: 0.7;
+   .hint-used-final {
+  stroke: rgba(255, 140, 0, 0.85);  /* deeper orange */
+  opacity: 0.9;
   pointer-events: none;
 }
+
 
 
   </style>
