--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
 
    .hint-used-final {
-  stroke: rgba(255, 140, 0, 0.85);  /* deeper orange */
-  opacity: 0.9;
+  stroke: rgba(255, 120, 0, 1);
+  opacity: 1;
   pointer-events: none;
 }
 
