--- a/index.html
+++ b/index.html
@@ -1301,12 +1301,13 @@ if (isCorrect) {
 } else if (usedHint) {
   for (const layer of layers) {
     layer.setStyle({
-  color: 'rgba(255, 165, 0, 0.4)', // soft transparent orange
-  weight: 6,
-  opacity: 0.7,
+  color: '#FF8000',   
+  weight: 7,
+  opacity: 0.9,
   pane: 'hiddenRoads'
 });
-    layer._originalColor = 'rgba(255, 165, 0, 0.4)';
+
+    layer._originalColor = '#FF8000';
   }
 } else {
   // Animate incorrect red segments
