--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 </head>
 <body>
   <div id="map"></div>
+  <button id="back-button" style="position: absolute; top: 10px; left: 10px; z-index: 999; display: none;">
+  ← Back
+</button>
+
   <div id="music-btn" title="Music Settings">🎵</div>
   <div id="music-modal">
     <button id="mute-btn">Mute</button>
