--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
         layer.on('click', function () {
           map.fitBounds(layer.getBounds());
           insideLancaster = true;
+          document.getElementById('back-button').style.display = 'block';
 
           if (!worldMask) {
             worldMask = L.geoJSON(createWorldMask(feature), {
@@ -926,6 +927,8 @@ mtLayer.on('mouseout', function () {
   map.fitBounds(mtLayer.getBounds(), { maxZoom: 15 });
   console.log("📍 Manheim Township clicked");
                       mtLayer.unbindTooltip();
+                      document.getElementById('back-button').style.display = 'block';
+
 
 
   // 🔒 Disable interaction and fade MT polygon
@@ -1436,6 +1439,27 @@ document.getElementById('give-up').onclick = async function () {
     window.scrollTo({ top: 0, behavior: 'smooth' });
   }, usedHint ? 2000 : 0);
 };
+document.getElementById('back-button').addEventListener('click', () => {
+  // Hide roads
+  Object.values(nameToLayers).flat().forEach(layer => {
+    layer.setStyle({ opacity: 0, interactive: false });
+  });
+
+  // Reset all interactive flags
+  activeRoadName = null;
+  currentRoad = null;
+  insideLancaster = false;
+
+  // Re-enable zone clicking if needed
+  document.getElementById('back-button').style.display = 'none';
+
+  // Optional: visually re-emphasize the polygon again
+  lancasterPolygon.setStyle({
+    fillOpacity: 0.4,
+    color: '#555',
+    weight: 2
+  });
+});
 
   </script>
 </body>
