--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
       cursor: pointer;
       z-index: 1002;
     }
+    <button id="exit-zone-btn" style="
+  position: absolute;
+  bottom: 85px;
+  left: 10px;
+  z-index: 9999;
+  padding: 6px 12px;
+  font-size: 14px;
+  background: white;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  font-weight: 600;
+  cursor: pointer;
+">
+  ← Exit
+</button>
+
 
     #music-modal {
   position: absolute;
