--- a/index.html
+++ b/index.html
@@ -233,6 +233,23 @@
     <button id="mute-btn">Mute</button>
     <button id="skip-btn">Skip Track</button>
   </div>
+  <button id="exit-zone-btn" style="
+  position: absolute;
+  top: 170px;     /* match music button */
+  left: 50px;     /* offset right of music icon (30px icon + 10px spacing) */
+  z-index: 1003;  /* 1 layer above music */
+  padding: 6px 12px;
+  font-size: 14px;
+  background: white;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  font-weight: 600;
+  cursor: pointer;
+">
+  ← Exit
+</button>
+
  <div class="legend" id="legend">
   <strong style="display: block; margin-bottom: 6px;">Legend</strong>
   <div class="legend-item"><div class="legend-color" style="background: black;"></div>Unguessed</div>
@@ -246,23 +263,7 @@
 <div id="auth-box" class="legend" style="right: 10px; left: auto;">
   <div id="auth-message">Checking login...</div>
   <button id="login-btn" style="margin-top: 2px;">Login with Google</button>
- <button id="exit-zone-btn" style="
-  position: absolute;
-  bottom: 85px;
-  left: 10px;
-  z-index: 9999;
-  padding: 6px 12px;
-  font-size: 14px;
-  background: white;
-  border: 1px solid #aaa;
-  border-radius: 5px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  font-weight: 600;
-  cursor: pointer;
-">
-  ← Exit
-</button>
-
+ 
 <p id="login-note" style="
   font-size: 12px;
   color: #888;
