--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   border: 1px solid #ccc;
   border-radius: 8px;
   padding: 8px;
-  font-family: Arial, sans-serif;
+  font-family: system-ui, sans-serif;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.4em;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.12);
   z-index: 1000;
@@ -241,9 +241,9 @@
   left: 50px;     /* offset right of music icon (30px icon + 10px spacing) */
   z-index: 1003;  /* 1 layer above music */
   padding: 6px 12px;
-  font-family: Arial, sans-serif;
+  font-family: system-ui, sans-serif;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
   background: white;
   border: 1px solid #aaa;
   border-radius: 5px;
