--- a/index.html
+++ b/index.html
@@ -250,8 +250,9 @@
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   cursor: pointer;
 ">
-  <span style="font-size: 14.5px; font-weight: 600;">← Exit</span>
+  <span style="font-size: 15px; font-weight: 600;">⬅ Exit</span>
 </button>
+
 
 
  <div class="legend" id="legend">
