--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 
  <div class="legend" id="legend">
-  <strong style="display: block; margin-bottom: 6px;">Legend</strong>
+  <strong style="display: block; text-align: center; margin-bottom: 6px;">Legend</strong>
   <div class="legend-item"><div class="legend-color" style="background: black;"></div>Unguessed</div>
   <div class="legend-item"><div class="legend-color" style="background: red;"></div>Incorrect</div>
   <div class="legend-item"><div class="legend-color" style="background: orange;"></div>Hint Used</div>
