--- a/index.html
+++ b/index.html
@@ -257,13 +257,38 @@
 
  <div class="legend" id="legend">
   <strong style="display: block; text-align: center; margin-bottom: 6px;">Legend</strong>
-  <div class="legend-item"><div class="legend-color" style="background: black;"></div>Unguessed</div>
-  <div class="legend-item"><div class="legend-color" style="background: red;"></div>Incorrect</div>
-  <div class="legend-item"><div class="legend-color" style="background: orange;"></div>Hint Used</div>
-  <div class="legend-color" style="background-color: #008000; margin-right: 15px;"></div>Correct
-  <div class="legend-item"><div class="legend-color" style="background: yellow;"></div>Suffix Warning</div>
-  <div class="legend-item"><div class="legend-color" style="background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); border: none;"></div>Photo Only</div>
+  <div class="legend-item">
+  <div class="legend-color" style="background: black;"></div>
+  <div style="flex: 1; text-align: center;">Unguessed</div>
 </div>
+  <div class="legend-item">
+  <div class="legend-color" style="background: red;"></div>
+  <div style="flex: 1; text-align: center;">Incorrect</div>
+</div>
+  <div class="legend-item">
+  <div class="legend-color" style="background: orange;"></div>
+  <div style="flex: 1; text-align: center;">Hint Used</div>
+</div>
+
+  <div class="legend-item">
+  <div class="legend-color" style="background-color: #008000; margin-right: 15px;"></div>
+  <div style="flex: 1; text-align: center;">Correct</div>
+</div>
+
+
+  <div class="legend-item">
+  <div class="legend-color" style="background: yellow;"></div>
+  <div style="flex: 1; text-align: center;">Suffix Warning</div>
+</div>
+
+  <div class="legend-item">
+  <div class="legend-color" style="
+    background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+    border: none;
+  "></div>
+  <div style="flex: 1; text-align: center;">Photo Only</div>
+</div>
+
 
 <div id="auth-box" class="legend" style="right: 10px; left: auto;">
   <div id="auth-message">Checking login...</div>
