--- a/index.html
+++ b/index.html
@@ -288,9 +288,11 @@
   "></div>
   <div style="flex: 1; text-align: center;">Photo Only</div>
 </div>
+   </div> 
 
 
-<div id="auth-box" class="legend" style="right: 10px; left: auto;">
+<div id="auth-box" style="position: absolute; top: 10px; right: 10px; background: white; padding: 8px; border-radius: 8px; z-index: 1000;">
+
   <div id="auth-message">Checking login...</div>
   <button id="login-btn" style="margin-top: 2px;">Login with Google</button>
  
