--- a/index.html
+++ b/index.html
@@ -67,21 +67,39 @@
 }
 
 
-    #music-btn {
-      position: absolute;
-      top: 170px;
-      left: 10px;
-      background: white;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      font-size: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      z-index: 1002;
-    }
+   #music-btn {
+  position: absolute;
+  top: 200px; /* adjust if needed */
+  left: 45px; /* nudged slightly to center under legend */
+  background: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 1002;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.12);
+}
+
+#exit-zone-btn {
+  position: absolute;
+  top: 240px; /* roughly 40px below music icon */
+  left: 30px;  /* aligns horizontally with music icon + legend */
+  z-index: 9999;
+  padding: 6px 12px;
+  font-size: 13px;
+  font-family: system-ui, sans-serif;
+  font-weight: 600;
+  background: white;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  cursor: pointer;
+}
+
    
     #music-modal {
   position: absolute;
